@@ -71,7 +71,7 @@ public class PortfolioDKK implements Portfolios {
 
     public List<String> getSectorDistribution() {
         List<String> sectorList = new ArrayList<>();
-        String sector = holdings.getFirst().getSector();
+        String sector = holdings.get(0).getSector();
         double sectorInvestment = 0;
         sectorList.add("Total cash: " + String.format("%.2f", getLiquidCash()) + " DKK Percentage of portfolio: " +
                 String.format("%.2f", getPercentageOfPortfolio(getLiquidCash())) + "%");
